# PureAutoCodeql

./: .gitignore  1.txt  AGENTS.md  Analyze.py  Analyze_Python.py  CONTRIBUTING.md  CPP.md  CPP_FINAL_PLAN.md  CodeQL构建卡顿诊断指南.md  GenerateCodeQL.py  LICENSE  MIGRATION_COMPLETE.md  README.md  SECURITY.md  alembic.ini  build.sh  build_mcp.bat  build_mcp.sh  compose.yaml  config.py  corrected_query.ql  cve-2020-0093.md  diagnose_imports.py  final_corrected_query.ql  generated_query.ql  model_switching_guide.md  monitor_build.py  output.md  providers.example.yaml  pyproject.toml  pyrightconfig.json  qlpack.yml  rag_codeql_tool.py  sarif2json.py  spring-reflection-injection-fixed.ql  test.py  test_empty_results.py  test_lsp.py  test_lsp_fix.py  test_output_structure.py  (+5 more)
.codeql-lsp-service/: _agent_check.ql
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  real-llm.yml
C/: CPP_TWO_STEP_BUILD_GUIDE.md
Information/: __init__.py  ghsa_fetch.py  ghsa_fetch_usage.md  nvd_fetch_usage.md  nvd_info_fetch.py  python_codeql_pipeline.md
agents/: __init__.py  c_sink_path_agent.py  c_source_analysis_agent.py  codeql_generator_agent.py  codeql_runner_agent.py  cve_analysis_agent.py  java_sink_path_agent.py  java_source_analysis_agent.py  path_analysis_agent.py  python_sink_path_agent.py  python_source_analysis_agent.py  sink_verification_agent.py  source_verification_agent.py  unified_sink_path_agent.py  unified_source_analysis_agent.py
analysis_output_20251106_203824/: analysis_summary.json  cve_analysis.md  query_results.sarif  sink_analysis.md  source_analysis.md
analysis_output_20251106_204650/: analysis_summary.json  cve_analysis.md  generated_query.ql  query_results.sarif  sink_analysis.md  source_analysis.md
api/: README.md  __init__.py  analysis_routes.py  config.py  langchain_routes.py  models.py  projects_routes.py  server.py  task_manager.py
config/: MAIN_PROGRAM_INTEGRATION.md  README.md  __init__.py  __main__.py  cli.py  core.py  display.py  keys copy.toml  keys.example.toml  keys.toml  legacy.py  技术文档.md
core/: __init__.py  context.py  orchestrator.py  pipeline.py
docker/: BUILD_DEPLOY_GUIDE.md  Dockerfile  Dockerfile.app  builder_entrypoint.py
docs/: 06_路径选择与结果质量检测.md  CHANGELOG_config_v2.md  HOW_TO_ADD_CASES.md  KB_BEFORE_AFTER_COMPARISON.md  KB_INTEGRATION_SOLUTION.md  OPTIMIZATION_SUMMARY.md  POST_MERGE_STATUS.md  QUICK_REFERENCE.md  TEMPLATE_KB_OPTIMIZATION.md  api_reference.md  api_v1_migration.md  architecture.md  auto_import_quickstart.md  codeql_breakpoint_detection_README.md  codeql_breakpoint_integration_summary.md  codeql_lsp_troubleshooting.md  config_migration_guide.md  config_system_guide.md  deployment.md  environment_setup.md  extra_input_files.md  extra_input_files_quickstart.md  extra_input_files_simple.md  flow_break_detection.md  language_capabilities.md  large_file_handling_solution.md  output_files_guide.md  package_architecture.md  path_selection_run_guide.md  path_selection_solution.md
examples/: agent_with_extra_files.py  config_demo.py  custom_provider_demo.py  java_project_import_demo.py  langchain_tools_usage.py  path_selection_demo.py  run_target_query_with_agent.py  simple_extra_files_demo.py  use_extra_input_files.py
migrations/: env.py
openspec/: project.md
output/: result_20251024_155920.sarif  result_20251031_155449.sarif  result_20251031_164246.sarif
path_selector/: __init__.py  agent.py  cli.py  prompts.py  review.py  scoring.py  selector.py
projects/: README.md
prompts/: __init__.py  breakpoint_template_ql.md  c_patterns.md  c_source_sink_ql.md  c_template_ql.md  codeql_breakpoint_analysis.md  codeql_breakpoint_analysis_java.md  codeql_breakpoint_analysis_python.md  codeql_breakpoint_detect.md  codeql_breakpoint_flowstep.md  codeql_breakpoint_flowstep_cpp.md  codeql_breakpoint_flowstep_java.md  codeql_breakpoint_flowstep_python.md  codeql_erroranalyze.md  codeql_fix_inplace.md  codeql_generate.md  codeql_prompts.py  cpp_sink_prompt.py  isAddition_template_ql.md  java_sink_prompt.py  java_source_sink_ql.md  java_temple_ql.md  path_analysis_prompts.py  python_patterns.md  python_sink_prompt.py  python_source_sink_ql.md  python_template_ql.md  sink_prompt_manager.py  source_prompt_manager.py  source_prompts.py  verification_prompt_manager.py
pure_auto_codeql/: analysis_models.py  analysis_schemas.py  configuration.py  observability.py  paths.py  worker.py
scripts/: bootstrap.ps1  bootstrap.py  bootstrap.sh  build_mcp.bat  build_mcp.sh  smoke_lsp_syntax.py  smoke_source_lsp.py  smoke_sse_stream.py  start_api_server.bat  start_api_server.ps1  start_api_server.sh
services/: __init__.py  agent_mcp_config.py  codeql_execution.py  codeql_prompt.py  codeql_syntax.py  flow_break_detection.py  language_detector.py  llm_service.py  lsp_service.py  mcp_language_config.py
test/: temp_codeql_agent.py  test_404_retry_mechanism.py  test_application_services.py  test_bootstrap.py  test_cli_refactor.py  test_codeql_golden.py  test_codeql_lsp_service.py  test_codeql_parsing_characterization.py  test_durable_platform.py  test_flow_break_detection.py  test_hardening_phase1.py  test_lsp_environment.py  test_lsp_lookup.py  test_optimization_regressions.py  test_pipeline_integration.py  test_process_control_portability.py  test_real_llm_contract.py  test_security_regressions.py  test_sink_prompt_paths.py  test_sse_stream.py  test_terminal_output.py
tests/: test_codeql_compose_tool.py  test_collect_intel.py  test_langchain_tools.py
tools/: README.md  __init__.py  codeql_compose.py  codeql_compose.py.backup  codeql_generator_tool.py  codeql_runner_tool.py  extract_ql.py  extract_ql_example.py  extract_ql_improved.py  extract_ql_improved_README.md  lsp_codeql.py  lsp_lookup_tool.py
utils/: __init__.py  case.py  codeql.py  cve_fetcher.py  dependency_installer.py  doctor.py  intel.py  io.py  java.py  logger.py  lsp_definition.py  mcp_schema_fixer.py  project_import_policy.py  project_importer.py  sarif_config.py  sarif_utils.py
(+2913 files in other folders)
