[project]
name = "pure-auto-codeql"
version = "0.1.0"
description = "Multi-agent CodeQL vulnerability analysis pipeline for CVE research"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
    { name = "Fruit Guardians" },
]
keywords = [
    "codeql",
    "security",
    "static-analysis",
    "vulnerability-research",
    "cve",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "alembic>=1.16.0",
    "asyncpg>=0.30.0",
    "boto3>=1.38.0",
    "fastapi>=0.115.0",
    "httpx[socks]>=0.28.1",
    "langchain>=1.0.1",
    "langchain-mcp-adapters>=0.1.11",
    "langchain-openai>=1.0.0",
    "langgraph>=0.2.30",
    "langserve[all]>=0.3.0",
    "mcp-server-tree-sitter>=0.5.1",
    "numpy>=2.3.4",
    "openai-agents>=0.4.0",
    "opentelemetry-api>=1.35.0",
    "opentelemetry-exporter-otlp-proto-http>=1.35.0",
    "opentelemetry-sdk>=1.35.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyright>=1.1.400",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "python-multipart>=0.0.9",
    "python-toon>=0.1.3",
    "pyyaml>=6.0.0",
    "redis>=6.2.0",
    "rich>=13.0.0",
    "scikit-learn>=1.7.2",
    "sqlalchemy[asyncio]>=2.0.40",
    "tiktoken>=0.5.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.21.0",
    "coverage[toml]>=7.9.0",
    "mypy>=1.16.0",
    "pip-audit>=2.9.0",
    "pytest-cov>=6.2.0",
    "ruff>=0.12.0",
]

[tool.coverage.run]
source = ["pure_auto_codeql"]
omit = [
    "pure_auto_codeql/testing/*",
]

[tool.coverage.report]
fail_under = 70
show_missing = true
include = [
    "pure_auto_codeql/analysis_models.py",
    "pure_auto_codeql/analysis_schemas.py",
    "pure_auto_codeql/platform/*.py",
    "pure_auto_codeql/api/security.py",
    "pure_auto_codeql/services/artifacts.py",
    "pure_auto_codeql/services/codeql_composition/*.py",
    "pure_auto_codeql/services/process_control.py",
    "pure_auto_codeql/worker.py",
]

[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/Fruit-Guardians/PureAutoCodeql"
Repository = "https://github.com/Fruit-Guardians/PureAutoCodeql"
Issues = "https://github.com/Fruit-Guardians/PureAutoCodeql/issues"

[project.scripts]
pure-auto-codeql = "pure_auto_codeql.cli.app:cli"

[tool.setuptools]
py-modules = ["Analyze"]

[tool.setuptools.packages.find]
include = [
    "pure_auto_codeql*",
]
exclude = [
    "projects*",
    "resources*",
    "test*",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["test"]
python_files = ["test_*.py"]
addopts = "-m 'not real_codeql and not real_llm'"
markers = [
    "real_codeql: executes the installed CodeQL CLI against golden cases",
    "real_llm: calls a configured real LLM and is excluded from PR CI",
]

[tool.ruff]
line-length = 120
target-version = "py313"
extend-exclude = [
    "projects",
    "resources",
    "temp",
    "tools/mcp_ripgrep",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E402",  # module import not at top: project sets up `logger` before imports intentionally
    "E501",  # line length handled leniently; not enforced
    "E741",  # ambiguous variable names (existing style)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # re-export surfaces
"Analyze.py" = ["F401"]   # backward-compat re-export shim
"pure_auto_codeql/configuration.py" = ["F401"]  # canonical re-export surface
